优化操作租户超管的控制逻辑